@@ -1,4 +1,5 @@
 #include "ruby.h"
+#include "internal.h"
 
 static VALUE
 bug_big_zero(VALUE self, VALUE length)
